@@ -230,13 +230,32 @@ TTabletCellStatistics* TTabletCell::GetCellStatistics(NObjectClient::TCellTag ce
 
 void TTabletCell::RecomputeClusterStatistics()
 {
+    auto combineHealths = [] (auto lhs, auto rhs) {
+        static constexpr std::array<ETabletCellHealth, 4> HealthOrder{{
+            ETabletCellHealth::Failed,
+            ETabletCellHealth::Degraded,
+            ETabletCellHealth::Initializing,
+            ETabletCellHealth::Good}};
+
+        for (auto health : HealthOrder) {
+            if (lhs == health || rhs == health) {
+                return health;
+            }
+        }
+
+        return ETabletCellHealth::Failed;
+    };
+
     ClusterStatistics_ = TTabletCellStatistics();
     ClusterStatistics_.Decommissioned = true;
+    ClusterStatistics_.Health = GetHealth();
     for (const auto& pair : MulticellStatistics_) {
         ClusterStatistics_ += pair.second;
         ClusterStatistics_.Decommissioned &= pair.second.Decommissioned;
+        ClusterStatistics_.Health = combineHealths(ClusterStatistics_.Health, pair.second.Health);
     }
 }
+
 ////////////////////////////////////////////////////////////////////////////////
 
 } // namespace NTabletServer
