@@ -130,6 +130,7 @@ message TTabletCellStatistics
     required int32 tablet_count = 13;
     repeated TTabletCountPerMemoryModeEntry tablet_count_per_memory_mode = 14;
     required bool decommissioned = 15;
+    required int32 health = 16;
 }
 
 message TReqSetTabletCellStatistics
