@@ -6,6 +6,7 @@
 #    yt/server/cell_master/serialize.cpp - если версия другая, то обновлнеие нужно делать через снапшот мастера (сделаный с --set-read-only).
 #    yt/server/tablet_node/serialize.cpp - если версия другая, то обновление нужно делать с пересозданием таблет-целлов.
 
+* savrus: В статистики таблет целлов добавилoсь поле health, обновляться через снапшот.
 * babenko: У реплик таблиц появилось новое состояние "enabling" и изменился протокол перевода их в состояние "enabled". Обновление через снепшот.
 * savrus: Подправил протокол общения между мастерами, обновляться через снапшот.
 * savrus: Проверить, что на нодах кластера работает ядро версии не ниже 4.4.114-5 (нужно для ytalloc).
